@@ -167,7 +167,8 @@ template<typename... Args>
 		template <typename U>
 		Proxy& operator=(const traits::named_object<U>& rhs){
 			SETCAR( node, rhs.object ) ;
-			SET_TAG( node, Rf_install( rhs.name.c_str() ) ) ;
+			SEXP rhsNameSym = ::Rf_install( rhs.name.c_str() ); // cannot be gc()ed once in symbol table
+			SET_TAG( node, rhsNameSym ) ;
 			return *this ;
 		}
 		
