@@ -739,7 +739,10 @@ extern "C" SEXP _rcpp_module_boot_##name(){                          \
 }                                                                    \
 void _rcpp_module_##name##_init()
 
-#define LOAD_RCPP_MODULE(NAME) Rf_eval( Rf_lang2( Rf_install("Module"), _rcpp_module_boot_##NAME() ), R_GlobalEnv )
+#define LOAD_RCPP_MODULE(NAME) 							\
+    SEXP moduleSym = Rf_install("Module");					\
+    Rf_eval( Rf_lang2( moduleSym, _rcpp_module_boot_##NAME() ), R_GlobalEnv )
+
 
 #endif
 
