@@ -61,8 +61,9 @@ SEXP grow__dispatch( ::Rcpp::traits::false_type, const T& head, SEXP tail ){
 template <typename T>
 SEXP grow__dispatch( ::Rcpp::traits::true_type, const T& head, SEXP tail ){
 	SEXP y = PROTECT( wrap( head.object) ) ;
-    SEXP x = PROTECT( Rf_cons( y , tail) ) ;
-	SET_TAG( x, Rf_install( head.name.c_str() ) ); 
+	SEXP x = PROTECT( Rf_cons( y , tail) ) ;
+	SEXP headNameSym = ::Rf_install( head.name.c_str() ); // cannot be gc()ed once in symbol table
+	SET_TAG( x, headNameSym ); 
 	UNPROTECT(2); 
 	return x; 	
 }
