@@ -2,6 +2,10 @@
 
 	* inst/include/Rcpp/DataFrame_generated.h: Assign Rf_install() result
 	to local SEXP (by modifying generator script creating the file)
+	* inst/include/Rcpp/DataFrame.h: Assign Rf_install() result to local SEXP
+	* inst/include/Rcpp/DottedPair.h: idem
+	* inst/include/Rcpp/grow.h: idem
+	* inst/include/Rcpp/Module.h: idem
 
 2011-01-25  Douglas Bates  <bates@stat.wisc.edu>
 
